@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.562 2006/02/08 18:59:12 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.563 2006/02/08 21:48:10 rocket Exp $
+
+  08 Feb 2006; Eric Edgar <rocket@gentoo.org>
+  targets/support/bootloader-setup.sh:
+  add additional console less entry when consoles are chosen for ppc64
 
   08 Feb 2006; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
